// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module tests Index Renders correctly 1`] = `
<div
  class="container md:h-screen relative"
>
  <span
    class="flex flex-col justify-center items-center mt-12"
  >
    <span
      class="flex items-end"
    >
      <p
        class="title-test font-titles font-bold capitalize sm:text-lg md:text-2xl mr-1"
      >
        
      Kind responses for everybody
    
      </p>
       
      <svg
        class="icon-test stroke-current text-danger w-8"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
   
  <div
    class="started-test flex flex-col md:flex-row mx-auto border-secondary border-solid border-2 w-4/5 z-10 origin-center"
  >
    <div
      class="wrapper w-full md:w-1/2 flex flex-col  mt-3 md:my-auto"
    >
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    From
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="From"
          label="From"
          options="[object Object]"
          placeholder="Mike"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      From
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    To
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="To"
          label="To"
          options="[object Object]"
          placeholder="My lovely Boss"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      To
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
     Category
  
        </label>
         
        <div
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary "
          id=" Category"
          label=" Category"
          placeholder=""
          type="select"
        >
          <button
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="listbox-label"
            class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-default focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm excluded"
            id="dropdown-button"
            type="button"
          >
            <span
              class="flex items-center"
            >
              <span
                class="ml-3 block truncate"
              >
                
        test
      
              </span>
            </span>
             
            <span
              class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
           
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
          >
            <ul
              aria-activedescendant="listbox-item-3"
              aria-labelledby="listbox-label"
              class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48"
              role="listbox"
              tabindex="-1"
            >
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-0"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test
          
                  </span>
                </div>
                 
                <span
                  class="absolute inset-y-0 right-0 flex items-center pr-4"
                >
                  <svg
                    class="icon-test stroke-current text-danger w-8"
                    fill="currentColor"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-1"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test2
          
                  </span>
                </div>
                 
                <!---->
              </li>
            </ul>
          </div>
        </div>
      </div>
       
      <button
        class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
        type="submit"
      >
        <span
          class="absolute left-0 inset-y-0 flex items-center pl-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-white group-hover:text-white"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        
    Find Response
  
      </button>
    </div>
     
    <div
      class="rounded-md w-full md:w-1/2 my-2 border-secondary border"
    >
      <div
        class="clearfix flex items-end "
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M8 15v1H4v1H3v3h14v-3h-1v-1h-4v-1h3v-1h1v-1h1v-3h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v3h1v3h1v1h1v1h3z"
              fill="#F5CFA0"
            />
            <path
              d="M5 15v-1H4v-1H3v-3H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v3h-1v3h-1v1h-1v1H5z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M5 7v1h3V7H5zm7 0h3v1h-3V7z"
              fill="#FFF"
            />
            <path
              d="M5 9V8h1V7h1v1h1v1H5zm7 0V8h1V7h1v1h1v1h-3z"
              fill="#5b7c8b"
            />
            <path
              d="M5 9V8h1V7h1v1h1v1H7V8H6v1H5zm7 0V8h1V7h1v1h1v1h-1V8h-1v1h-1z"
              fill="#FFF"
              fill-opacity=".5"
            />
            <path
              d="M12 7V6h1V5h1v1h1v1h-1V6h-1v1h-1zM5 7V6h1V5h1v1h1v1H7V6H6v1H5z"
              fill="#211b14"
              fill-rule="evenodd"
            />
            <path
              d="M3 10v3h1v1h1v1h10v-1h1v-1h1v-3h-3v1H6v-1H3z"
              fill="#3b3024"
              fill-opacity="0.75"
              id="Path"
            />
            <path
              d="M9 12v2h2v-2H9z"
              fill="#dbb2a0"
            />
            <path
              d="M3 20v-3h1v-1h4v1h4v-1h4v1h1v3H3z"
              fill="#5a5255"
            />
            <path
              d="M3 19h14v1H3v-1zm0-2h14v1H3v-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 3v2h1V4h1V3h10v1h1v1h1V3h-1V2H4v1H3z"
              fill="#3b3024"
            />
          </svg>
        </span>
         
        <div
          class="bg-secondary w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    Hi can you tell me why you are not at work ?
  
        </div>
      </div>
       
      <div
        class="clearfix flex items-end flex-row-reverse"
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M8 15v1H4v1H3v3h14v-3h-1v-1h-4v-1h3v-1h1v-1h1v-3h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v3h1v3h1v1h1v1h3z"
              fill="#FFDBAC"
            />
            <path
              d="M5 15v-1H4v-1H3v-3H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v3h-1v3h-1v1h-1v1H5z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M6 8h1v1H6V8zm7 0h1v1h-1V8z"
              fill="#FFF"
            />
            <path
              d="M7 8h1v1H7V8zm5 0h1v1h-1V8z"
              fill="#588387"
            />
            <path
              d="M4 7V6h1V5h1v1H5v1H4zm10-2h1v1h1v1h-1V6h-1V5z"
              fill="#000000"
              fill-rule="evenodd"
            />
            <path
              d="M7 12v1h1v1h4v-1H8v-1H7z"
              fill="#d29985"
            />
            <path
              d="M4 8H3V7h1V6h5v1h2V6h5v1h1v1h-1v2h-5V8H9v2H4V8zm1 0V7h3v2H5V8zm7-1v2h3V7h-3z"
              fill="#5f705c"
              fill-rule="evenodd"
            />
            <path
              d="M5 7h3v2H5V7zm7 0h3v2h-3V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M14 7h1v1h-1V7zM7 7h1v1H7V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 8V7h1v1H3zm6-1v1h2V7H9zm7 0v1h1V7h-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 20v-3h1v-1h3v-1h1v1h1v1h2v-1h1v-1h1v1h3v1h1v3H3z"
              fill="#1b85b8"
            />
            <path
              d="M6 16H4v1H3v3h6v-2H8v-1H6v-1zm2 0h1-1zm3 0h1-1zm2 0h1v1h-2v1h-1v2h6v-3h-1v-1h-3z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 7h1V5h2V3h8v1h1v1h1v2h1V3h-2V2h-2V1h-1v1h-2V1H9v1H8V1H7v1H5v1H4v1H3v3z"
              fill="#090806"
            />
          </svg>
        </span>
         
        <div
          class="bg-danger w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    I dont know
  
        </div>
      </div>
    </div>
  </div>
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 left-1 md:top-2 md:left-3"
    src="../static/undraw_conversation_h12g.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 right-1 md:top-2 md:right-5"
    src="../static/undraw_super_thank_you_obwk.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute bottom-2 right-4 md:bottom-2 md:right-15"
    src="../static/undraw_share_opinion_jpw0.svg"
  />
</div>
`;

exports[`Module tests Index Set 'from' 1`] = `
<div
  class="container md:h-screen relative"
>
  <span
    class="flex flex-col justify-center items-center mt-12"
  >
    <span
      class="flex items-end"
    >
      <p
        class="title-test font-titles font-bold capitalize sm:text-lg md:text-2xl mr-1"
      >
        
      Kind responses for everybody
    
      </p>
       
      <svg
        class="icon-test stroke-current text-danger w-8"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
   
  <div
    class="started-test flex flex-col md:flex-row mx-auto border-secondary border-solid border-2 w-4/5 z-10 origin-center"
  >
    <div
      class="wrapper w-full md:w-1/2 flex flex-col  mt-3 md:my-auto"
    >
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    From
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="From"
          label="From"
          options="[object Object]"
          placeholder="Mike"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      From
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    To
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="To"
          label="To"
          options="[object Object]"
          placeholder="My lovely Boss"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      To
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
     Category
  
        </label>
         
        <div
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary "
          id=" Category"
          label=" Category"
          placeholder=""
          type="select"
        >
          <button
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="listbox-label"
            class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-default focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm excluded"
            id="dropdown-button"
            type="button"
          >
            <span
              class="flex items-center"
            >
              <span
                class="ml-3 block truncate"
              >
                
        test
      
              </span>
            </span>
             
            <span
              class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
           
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
          >
            <ul
              aria-activedescendant="listbox-item-3"
              aria-labelledby="listbox-label"
              class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48"
              role="listbox"
              tabindex="-1"
            >
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-0"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test
          
                  </span>
                </div>
                 
                <span
                  class="absolute inset-y-0 right-0 flex items-center pr-4"
                >
                  <svg
                    class="icon-test stroke-current text-danger w-8"
                    fill="currentColor"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-1"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test2
          
                  </span>
                </div>
                 
                <!---->
              </li>
            </ul>
          </div>
        </div>
      </div>
       
      <button
        class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
        type="submit"
      >
        <span
          class="absolute left-0 inset-y-0 flex items-center pl-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-white group-hover:text-white"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        
    Find Response
  
      </button>
    </div>
     
    <div
      class="rounded-md w-full md:w-1/2 my-2 border-secondary border"
    >
      <div
        class="clearfix flex items-end "
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M8 15v1H4v1H3v3h14v-3h-1v-1h-4v-1h3v-1h1v-1h1v-3h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v3h1v3h1v1h1v1h3z"
              fill="#FFDBAC"
            />
            <path
              d="M5 15v-1H4v-1H3v-3H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v3h-1v3h-1v1h-1v1H5z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M6 8h1v1H6V8zm7 0h1v1h-1V8z"
              fill="#FFF"
            />
            <path
              d="M7 8h1v1H7V8zm5 0h1v1h-1V8z"
              fill="#588387"
            />
            <path
              d="M4 7V6h1V5h1v1H5v1H4zm10-2h1v1h1v1h-1V6h-1V5z"
              fill="#000000"
              fill-rule="evenodd"
            />
            <path
              d="M7 12v1h1v1h4v-1H8v-1H7z"
              fill="#d29985"
            />
            <path
              d="M4 8H3V7h1V6h5v1h2V6h5v1h1v1h-1v2h-5V8H9v2H4V8zm1 0V7h3v2H5V8zm7-1v2h3V7h-3z"
              fill="#5f705c"
              fill-rule="evenodd"
            />
            <path
              d="M5 7h3v2H5V7zm7 0h3v2h-3V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M14 7h1v1h-1V7zM7 7h1v1H7V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 8V7h1v1H3zm6-1v1h2V7H9zm7 0v1h1V7h-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 20v-3h1v-1h3v-1h1v1h1v1h2v-1h1v-1h1v1h3v1h1v3H3z"
              fill="#1b85b8"
            />
            <path
              d="M6 16H4v1H3v3h6v-2H8v-1H6v-1zm2 0h1-1zm3 0h1-1zm2 0h1v1h-2v1h-1v2h6v-3h-1v-1h-3z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 7h1V5h2V3h8v1h1v1h1v2h1V3h-2V2h-2V1h-1v1h-2V1H9v1H8V1H7v1H5v1H4v1H3v3z"
              fill="#090806"
            />
          </svg>
        </span>
         
        <div
          class="bg-secondary w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    Hi can you tell me why you are not at work ?
  
        </div>
      </div>
       
      <div
        class="clearfix flex items-end flex-row-reverse"
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M3 20v-3h1v-1h4v-2H6v-1H5v-1H4v-1H3V9H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v2h-1v2h-1v1h-1v1h-1v1h-2v2h4v1h1v3H3z"
              fill="#FFDBAC"
            />
            <path
              d="M14 14v-1h1v-1h1v-1h1V9h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v2h1v2h1v1h1v1h1v1h8z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M6 7h1v2H5V8h1V7zm7 0h1v2h-2V8h1V7z"
              fill="#FFF"
            />
            <path
              d="M7 7v1H6v1h2V7H7zm7 0v1h-1v1h2V7h-1z"
              fill="#588387"
            />
            <path
              d="M7 7v1h1V7H7zM6 8v1h1V8H6zm8-1v1h1V7h-1zm-1 1v1h1V8h-1z"
              fill="#FFF"
              fill-opacity=".5"
            />
            <path
              d="M7 5v1H5v1H4V6h1V5h2zm6 0h2v1h1v1h-1V6h-2V5z"
              fill="#523c33"
              fill-rule="evenodd"
            />
            <path
              d="M1 9v3h3V9H1zm1 1v1h1v-1H2zm14-1v3h3V9h-3zm1 1v1h1v-1h-1z"
              fill="#d3d3d3"
              fill-rule="evenodd"
            />
            <path
              d="M9 12v1h2v-1h1v-1h-1v1H9z"
              fill="#d29985"
            />
            <path
              d="M5 8h3v1H5V8zm7 0h3v1h-3V8z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M7 8h1v1H7V8zm7 0h1v1h-1V8z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M5 8v1h3V8H5zM3 7v1h1v1h1v1h3V9h1V8h2v1h1v1h3V9h1V8h1V7H3zm9 1v1h3V8h-3z"
              fill="#43677d"
              fill-rule="evenodd"
            />
            <path
              d="M3 7v1h1V7H3zm6 0v1h2V7H9zm7 0v1h1V7h-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 20v-3h1v-1h5v1h2v-1h5v1h1v3H3z"
              fill="#ffc425"
            />
            <path
              d="M3 17h14v1H3v-1zm0 2v1h14v-1H3z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M2 10h1V8h1V7h1V6h1V5h1V4h7v1h3V4h-1V3h-1V2H4v1H3v1H2v6z"
              fill="#6a4e42"
            />
          </svg>
        </span>
         
        <div
          class="bg-danger w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    I dont know
  
        </div>
      </div>
    </div>
  </div>
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 left-1 md:top-2 md:left-3"
    src="../static/undraw_conversation_h12g.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 right-1 md:top-2 md:right-5"
    src="../static/undraw_super_thank_you_obwk.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute bottom-2 right-4 md:bottom-2 md:right-15"
    src="../static/undraw_share_opinion_jpw0.svg"
  />
</div>
`;

exports[`Module tests Index Set 'to' 1`] = `
<div
  class="container md:h-screen relative"
>
  <span
    class="flex flex-col justify-center items-center mt-12"
  >
    <span
      class="flex items-end"
    >
      <p
        class="title-test font-titles font-bold capitalize sm:text-lg md:text-2xl mr-1"
      >
        
      Kind responses for everybody
    
      </p>
       
      <svg
        class="icon-test stroke-current text-danger w-8"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
   
  <div
    class="started-test flex flex-col md:flex-row mx-auto border-secondary border-solid border-2 w-4/5 z-10 origin-center"
  >
    <div
      class="wrapper w-full md:w-1/2 flex flex-col  mt-3 md:my-auto"
    >
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    From
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="From"
          label="From"
          options="[object Object]"
          placeholder="Mike"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      From
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
    To
  
        </label>
         
        <input
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary border-b border-solid border-primary pl-2"
          id="To"
          label="To"
          options="[object Object]"
          placeholder="My lovely Boss"
          type="text"
        >
          <option
            disabled="disabled"
            selected="selected"
            value=""
          >
            
      To
    
          </option>
        </input>
      </div>
       
      <div
        class="rounded-md w-full my-2 relative"
      >
        <label
          class="block text-sm font-medium text-gray-700 text-left pl-2"
          id="listbox-label"
        >
          
     Category
  
        </label>
         
        <div
          autocomplete="chrome-off"
          class="focus:outline-none focus:border-secondary transition-colors duration-500 block w-full sm:text-lg rounded-sm font-primary "
          id=" Category"
          label=" Category"
          placeholder=""
          type="select"
        >
          <button
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="listbox-label"
            class="relative w-full border border-primary rounded-md pl-3 pr-10 py-2 text-left cursor-default focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm excluded"
            id="dropdown-button"
            type="button"
          >
            <span
              class="flex items-center"
            >
              <span
                class="ml-3 block truncate"
              >
                
        test
      
              </span>
            </span>
             
            <span
              class="ml-3 absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-400"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
           
          <div
            class="absolute mt-1 w-full rounded-md bg-white shadow-lg z-10 hidden"
          >
            <ul
              aria-activedescendant="listbox-item-3"
              aria-labelledby="listbox-label"
              class="max-h-56 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm h-48"
              role="listbox"
              tabindex="-1"
            >
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-0"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test
          
                  </span>
                </div>
                 
                <span
                  class="absolute inset-y-0 right-0 flex items-center pr-4"
                >
                  <svg
                    class="icon-test stroke-current text-danger w-8"
                    fill="currentColor"
                    viewBox="0 0 20 20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="text-gray-900 cursor-default select-none relative py-2 pl-3 pr-9 hover:bg-secondary hover:text-white"
                id="listbox-item-1"
                role="option"
              >
                <div
                  class="flex items-center"
                >
                  <span
                    class="ml-3 block font-normal truncate"
                  >
                    
            test2
          
                  </span>
                </div>
                 
                <!---->
              </li>
            </ul>
          </div>
        </div>
      </div>
       
      <button
        class="group transition duration-150 ease-in-out relative w-full mt-5 shadow-sm flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-secondary lg:hover:bg-secondary-hovered lg:active:bg-secondary-hovered focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ac"
        type="submit"
      >
        <span
          class="absolute left-0 inset-y-0 flex items-center pl-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-white group-hover:text-white"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        
    Find Response
  
      </button>
    </div>
     
    <div
      class="rounded-md w-full md:w-1/2 my-2 border-secondary border"
    >
      <div
        class="clearfix flex items-end "
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M8 15v1H4v1H3v3h14v-3h-1v-1h-4v-1h3v-1h1v-1h1v-3h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v3h1v3h1v1h1v1h3z"
              fill="#FFDBAC"
            />
            <path
              d="M5 15v-1H4v-1H3v-3H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v3h-1v3h-1v1h-1v1H5z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M6 8h1v1H6V8zm7 0h1v1h-1V8z"
              fill="#FFF"
            />
            <path
              d="M7 8h1v1H7V8zm5 0h1v1h-1V8z"
              fill="#588387"
            />
            <path
              d="M4 7V6h1V5h1v1H5v1H4zm10-2h1v1h1v1h-1V6h-1V5z"
              fill="#000000"
              fill-rule="evenodd"
            />
            <path
              d="M7 12v1h1v1h4v-1H8v-1H7z"
              fill="#d29985"
            />
            <path
              d="M4 8H3V7h1V6h5v1h2V6h5v1h1v1h-1v2h-5V8H9v2H4V8zm1 0V7h3v2H5V8zm7-1v2h3V7h-3z"
              fill="#5f705c"
              fill-rule="evenodd"
            />
            <path
              d="M5 7h3v2H5V7zm7 0h3v2h-3V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M14 7h1v1h-1V7zM7 7h1v1H7V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 8V7h1v1H3zm6-1v1h2V7H9zm7 0v1h1V7h-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 20v-3h1v-1h3v-1h1v1h1v1h2v-1h1v-1h1v1h3v1h1v3H3z"
              fill="#1b85b8"
            />
            <path
              d="M6 16H4v1H3v3h6v-2H8v-1H6v-1zm2 0h1-1zm3 0h1-1zm2 0h1v1h-2v1h-1v2h6v-3h-1v-1h-3z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 7h1V5h2V3h8v1h1v1h1v2h1V3h-2V2h-2V1h-1v1h-2V1H9v1H8V1H7v1H5v1H4v1H3v3z"
              fill="#090806"
            />
          </svg>
        </span>
         
        <div
          class="bg-secondary w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    Hi can you tell me why you are not at work ?
  
        </div>
      </div>
       
      <div
        class="clearfix flex items-end flex-row-reverse"
      >
        <span
          class="inline-block h-12 w-12 md:h-16 md:w-16 rounded-full ring-2 ring-white"
        >
          <svg
            shape-rendering="crispEdges"
            style="isolation:isolate"
            version="1.1"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M8 15v1H4v1H3v3h14v-3h-1v-1h-4v-1h3v-1h1v-1h1v-3h1V7h-1V4h-1V3h-1V2H5v1H4v1H3v3H2v3h1v3h1v1h1v1h3z"
              fill="#FFDBAC"
            />
            <path
              d="M5 15v-1H4v-1H3v-3H2V7h1V4h1V3h1V2h10v1h1v1h1v3h1v3h-1v3h-1v1h-1v1H5z"
              fill="#FFF"
              fill-opacity=".1"
            />
            <path
              d="M6 8h1v1H6V8zm7 0h1v1h-1V8z"
              fill="#FFF"
            />
            <path
              d="M7 8h1v1H7V8zm5 0h1v1h-1V8z"
              fill="#588387"
            />
            <path
              d="M4 7V6h1V5h1v1H5v1H4zm10-2h1v1h1v1h-1V6h-1V5z"
              fill="#000000"
              fill-rule="evenodd"
            />
            <path
              d="M7 12v1h1v1h4v-1H8v-1H7z"
              fill="#d29985"
            />
            <path
              d="M4 8H3V7h1V6h5v1h2V6h5v1h1v1h-1v2h-5V8H9v2H4V8zm1 0V7h3v2H5V8zm7-1v2h3V7h-3z"
              fill="#5f705c"
              fill-rule="evenodd"
            />
            <path
              d="M5 7h3v2H5V7zm7 0h3v2h-3V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M14 7h1v1h-1V7zM7 7h1v1H7V7z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 8V7h1v1H3zm6-1v1h2V7H9zm7 0v1h1V7h-1z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 20v-3h1v-1h3v-1h1v1h1v1h2v-1h1v-1h1v1h3v1h1v3H3z"
              fill="#1b85b8"
            />
            <path
              d="M6 16H4v1H3v3h6v-2H8v-1H6v-1zm2 0h1-1zm3 0h1-1zm2 0h1v1h-2v1h-1v2h6v-3h-1v-1h-3z"
              fill="#FFF"
              fill-opacity=".2"
              fill-rule="evenodd"
            />
            <path
              d="M3 7h1V5h2V3h8v1h1v1h1v2h1V3h-2V2h-2V1h-1v1h-2V1H9v1H8V1H7v1H5v1H4v1H3v3z"
              fill="#090806"
            />
          </svg>
        </span>
         
        <div
          class="bg-danger w-1/2 mx-4 mt-2 mb-8 p-2 rounded-lg text-white"
        >
          
    I dont know
  
        </div>
      </div>
    </div>
  </div>
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 left-1 md:top-2 md:left-3"
    src="../static/undraw_conversation_h12g.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute top-2 right-1 md:top-2 md:right-5"
    src="../static/undraw_super_thank_you_obwk.svg"
  />
   
  <img
    alt="#"
    class="backround-image w-6/12 md:w-3/12 absolute bottom-2 right-4 md:bottom-2 md:right-15"
    src="../static/undraw_share_opinion_jpw0.svg"
  />
</div>
`;
